# devolutions-gateway

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  PLANNING.md  PLANNING_HISTORY.md  WINDOWS11-LICENSE.md  config_schema.json  program.md
crates/video-streamer/src/streamer/: mod.rs
devolutions-gateway/: Cargo.toml
devolutions-gateway/src/: config.rs  credential.rs  extract.rs  generic_client.rs  honeypot.rs  http.rs  lib.rs  listener.rs  ngrok.rs  openapi.rs  rd_clean_path.rs  rdp_playback.rs  rdp_proxy.rs  recording.rs  service.rs  session.rs  subscriber.rs  token.rs  wrapped_gfx.rs
devolutions-gateway/src/api/: health.rs  honeypot.rs  jrec.rs  mod.rs  session.rs
devolutions-gateway/src/rdp_gfx/: avc.rs  clearcodec.rs  framebuffer.rs  mod.rs  nsc.rs  overlay.rs  protocol.rs  rfx.rs  stego.rs
devolutions-gateway/tests/: config.rs  honeypot_stream.rs  preflight.rs
docs/honeypot/: architecture.md  contracts.md  decisions.md  deployment.md  operator-content-policy.md  release.md  research.md  risk.md  runbook.md  testing.md
honeypot/: README.md
honeypot/contracts/: Cargo.toml  README.md
honeypot/contracts/src/: auth.rs  control_plane.rs  error.rs  events.rs  frontend.rs  lib.rs  stream.rs  tests.rs
honeypot/control-plane/: Cargo.toml  README.md
honeypot/control-plane/src/: auth.rs  backend_credentials.rs  config.rs  health.rs  image.rs  lease.rs  lib.rs  main.rs  qemu.rs  vm.rs
honeypot/docker/: README.md  compose.yaml  promotion-manifest.json
honeypot/docker/config/control-plane/: config.toml  manual-lab-bootstrap.local.toml  manual-lab-bootstrap.toml
honeypot/docker/config/frontend/: config.toml
honeypot/docker/config/proxy/: gateway.json
honeypot/docker/control-plane/: Dockerfile
honeypot/docker/env/: control-plane.env  frontend.env  proxy.env
honeypot/docker/frontend/: Dockerfile
honeypot/docker/proxy/: Dockerfile
honeypot/docker/webplayer-builder/: Dockerfile
honeypot/frontend/: Cargo.toml  README.md
honeypot/frontend/src/: auth.rs  config.rs  lib.rs  main.rs
honeypot/frontend/templates/: capture_notice.html  command_proposal_notice.html  command_vote_notice.html  dashboard.html  error_fragment.html  focus_notice.html  focus_panel.html  player_frame.html  session_tile.html
honeypot/frontend/webplayer-workspace/: README.md  package.json  pnpm-lock.yaml
honeypot/frontend/webplayer-workspace/apps/recording-player/src/: browser-visibility.ts  gateway.ts  main.ts  telemetry.ts  ws-proxy.ts
testsuite/: Cargo.toml
testsuite/src/: cli.rs  dgw_config.rs  fake_qemu_bin.rs  honeypot_control_plane.rs  honeypot_docs.rs  honeypot_frontend.rs  honeypot_host_smoke_precheck_bin.rs  honeypot_manual_headed_writer_bin.rs  honeypot_manual_ironrdp_driver_bin.rs  honeypot_manual_ironrdp_rdpgfx.rs  honeypot_manual_lab.rs  honeypot_manual_lab_bin.rs  honeypot_release.rs  honeypot_tiers.rs  lib.rs  mcp_server.rs  ports.rs
testsuite/tests/: honeypot_control_plane.rs  honeypot_docs.rs  honeypot_frontend.rs  honeypot_manual_headed.rs  honeypot_manual_lab.rs  honeypot_release.rs  honeypot_tiers.rs  honeypot_visibility.rs  main.rs  mcp_proxy.rs
testsuite/tests/cli/: jetsocat.rs
testsuite/tests/cli/dgw/: ai_gateway.rs  honeypot.rs  mod.rs  preflight.rs  tls_anchoring.rs
