[package]
name = "testsuite"
version = "0.0.0"
edition = "2024"
description = "Devolutions Gateway Rust test suite"
publish = false
autotests = false

[lib]
doctest = false
test = false

[[test]]
name = "integration_tests"
path = "tests/main.rs"
harness = true

[[bin]]
name = "fake-qemu"
path = "src/fake_qemu_bin.rs"

[dependencies]
anyhow = "1.0"
assert_cmd = "2.1"
devolutions-gateway.path = "../devolutions-gateway"
dynosaur = "0.3"
escargot = "0.5"
expect-test = "1.5"
fastrand = "2"
honeypot-control-plane.path = "../honeypot/control-plane"
honeypot-contracts.path = "../honeypot/contracts"
honeypot-frontend.path = "../honeypot/frontend"
libc = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "process"] }
toml = "0.8"
typed-builder = "0.21"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
base64 = "0.22"
devolutions-gateway-task.path = "../crates/devolutions-gateway-task"
http-body-util = "0.1"
proxy-socks = { path = "../crates/proxy-socks" }
libsql = { version = "0.9", default-features = false, features = ["core"] }
mcp-proxy.path = "../crates/mcp-proxy"
rstest = "0.25"
serde_json = "1"
sysevent.path = "../crates/sysevent"
tempfile = "3"
test-utils.path = "../crates/test-utils"
time = "0.3"
tower = { version = "0.5", features = ["util"] }
tokio-rustls = { version = "0.26", features = ["ring"] }

[target.'cfg(unix)'.dev-dependencies]
sysevent-syslog.path = "../crates/sysevent-syslog"

[target.'cfg(windows)'.dev-dependencies]
sysevent-winevent.path = "../crates/sysevent-winevent"

[lints]
workspace = true
