[package]
name = "honeypot-control-plane"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "honeypot-control-plane"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio", "tracing"] }
devolutions-gateway = { path = "../../devolutions-gateway" }
honeypot-contracts = { path = "../contracts" }
humantime = "2.2"
libc = "0.2"
picky = { version = "7.0.0-rc.15", default-features = false, features = ["jose", "time_conversion", "x509"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
