[package]
name = "honeypot-frontend"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "honeypot-frontend"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", default-features = false, features = ["form", "http1", "json", "query", "tokio", "tracing"] }
devolutions-gateway = { path = "../../devolutions-gateway" }
futures = "0.3"
honeypot-contracts = { path = "../contracts" }
picky = { version = "7.0.0-rc.15", default-features = false, features = ["jose", "time_conversion", "x509"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }

[lints]
workspace = true
